--- a/index.html
+++ b/index.html
@@ -86,6 +86,19 @@
     <link rel="stylesheet" href="./assets/fonts/stylesheet.css" />
   </head>
   <body>
-    hello world
+    <header class="header sticky">
+      <div class="content">
+        <div class="row">
+          <img src="./assets/img/logo.svg" alt="logo" class="logo" />
+          <div class="nav">
+            <div class="nav-item active"><a href="!#">Home</a></div>
+            <div class="nav-item"><a href="!#">Courses</a></div>
+            <div class="nav-item"><a href="!#">Pricing</a></div>
+            <div class="nav-item"><a href="!#">Reviews</a></div>
+          </div>
+          <div class="btn btn-sign-up">Sign Up</div>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
