--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
     <link rel="stylesheet" href="./assets/fonts/stylesheet.css" />
   </head>
   <body>
+    <!-- header  -->
     <header class="header sticky">
       <div class="content">
         <div class="row">
@@ -100,5 +101,76 @@
         </div>
       </div>
     </header>
+    <!-- hero  -->
+    <div class="hero">
+      <div class="content">
+        <div class="row">
+          <div class="img-desc">
+            <img
+              src="./assets/img/img-hero.jpg"
+              alt="img-hero"
+              class="img-block"
+            />
+            <div class="desc-block">
+              <div class="desc-row">
+                <div class="icon">
+                  <img src="./assets/img/uiux.svg" alt="" class="uiux" />
+                </div>
+                <div class="desc-item">
+                  <p class="desc">20 Courses</p>
+                  <strong>UI/UX Design</strong>
+                </div>
+              </div>
+              <div class="desc-row">
+                <div class="icon">
+                  <img src="./assets/img/dev.svg" alt="" class="dev" />
+                </div>
+                <div class="desc-item">
+                  <p class="desc">30 Courses</p>
+                  <strong>Development</strong>
+                </div>
+              </div>
+              <div class="desc-row">
+                <div class="icon">
+                  <img src="./assets/img/mar.svg" alt="" class="mar" />
+                </div>
+                <div class="desc-item">
+                  <p class="desc">40 Courses</p>
+                  <strong>Marketing</strong>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="info">
+            <div class="container">
+              <h1 class="title">Learn without limits and spread knowledge.</h1>
+              <p class="desc">
+                Build new skills for that “this is my year” feeling with
+                courses, certificates, and degrees from world-class universities
+                and companies.
+              </p>
+              <div class="row-btn">
+                <div class="btn">See Courses</div>
+                <div class="row play">
+                  <img src="./assets/img/play.svg" alt="" class="play" />
+                  <p class="play">Watch Video</p>
+                </div>
+              </div>
+              <p class="desc">Recent engagement</p>
+              <div class="number row">
+                <div class="row row-studen">
+                  <strong>50K</strong>
+                  <span>Studens</span>
+                </div>
+                <div class="row row-course">
+                  <strong>70K</strong>
+                  <span>Courses</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
