--- a/index.html
+++ b/index.html
@@ -172,5 +172,173 @@
         </div>
       </div>
     </div>
+    <!-- popular -->
+    <div class="popular">
+      <div class="content">
+        <div class="row-top">
+          <div class="info">
+            <h2 class="title">Our popular courses</h2>
+            <p class="desc">
+              Build new skills with new trendy courses and shine for the next
+              future career.
+            </p>
+          </div>
+          <div class="chevron-box">
+            <div class="chevron-btn left">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-chevron-left"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0"
+                />
+              </svg>
+            </div>
+            <div class="chevron-btn right">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-chevron-right"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708"
+                />
+              </svg>
+            </div>
+          </div>
+        </div>
+        <div class="row-bottom">
+          <!-- box 1  -->
+          <div class="box">
+            <a href="!#">
+              <img src="./assets/img/img-popular-1.jpg" alt="" />
+            </a>
+            <div class="text-box">
+              <div class="container">
+                <div class="row-rating">
+                  <p class="title">
+                    <a href="#!" class="line-clamp word-break-all"
+                      >Basic web design</a
+                    >
+                  </p>
+                  <div class="box-rating">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="18"
+                      height="17"
+                      viewBox="0 0 18 17"
+                      fill="none"
+                    >
+                      <path
+                        d="M9 0L11.0206 6.21885H17.5595L12.2694 10.0623L14.2901 16.2812L9 12.4377L3.70993 16.2812L5.73056 10.0623L0.440492 6.21885H6.97937L9 0Z"
+                        fill="#FEA31B"
+                      />
+                    </svg>
+                    <p class="start">4.5</p>
+                  </div>
+                </div>
+                <p class="desc line-clamp line-2 word-break-all">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="payment">
+                  <p class="price">$120.75</p>
+                  <div class="btn">Book Now</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- box 2  -->
+          <div class="box">
+            <a href="#!">
+              <img src="./assets/img/img-popular-2.jpg" alt="" />
+            </a>
+            <div class="text-box">
+              <div class="container">
+                <div class="row-rating">
+                  <p class="title">
+                    <a href="#!" class="line-clamp word-break-all"
+                      >UI/UX design</a
+                    >
+                  </p>
+                  <div class="box-rating">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="18"
+                      height="17"
+                      viewBox="0 0 18 17"
+                      fill="none"
+                    >
+                      <path
+                        d="M9 0L11.0206 6.21885H17.5595L12.2694 10.0623L14.2901 16.2812L9 12.4377L3.70993 16.2812L5.73056 10.0623L0.440492 6.21885H6.97937L9 0Z"
+                        fill="#FEA31B"
+                      />
+                    </svg>
+                    <p class="start">4.5</p>
+                  </div>
+                </div>
+                <p class="desc line-clamp line-2 word-break-all">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="payment">
+                  <p class="price">$120.75</p>
+                  <div class="btn">Book Now</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- box 3  -->
+          <div class="box">
+            <a href="#!">
+              <img src="./assets/img/img-popular-3.jpg" alt="" />
+            </a>
+            <div class="text-box">
+              <div class="container">
+                <div class="row-rating">
+                  <p class="title">
+                    <a href="#!" class="line-clamp word-break-all">
+                      Web App design
+                    </a>
+                  </p>
+                  <div class="box-rating">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="18"
+                      height="17"
+                      viewBox="0 0 18 17"
+                      fill="none"
+                    >
+                      <path
+                        d="M9 0L11.0206 6.21885H17.5595L12.2694 10.0623L14.2901 16.2812L9 12.4377L3.70993 16.2812L5.73056 10.0623L0.440492 6.21885H6.97937L9 0Z"
+                        fill="#FEA31B"
+                      />
+                    </svg>
+                    <p class="start">4.5</p>
+                  </div>
+                </div>
+                <p class="desc line-clamp line-2 word-break-all">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="payment">
+                  <p class="price">$120.75</p>
+                  <div class="btn">Book Now</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
