--- a/index.html
+++ b/index.html
@@ -377,5 +377,44 @@
         </div>
       </div>
     </div>
+    <!-- features  -->
+    <div class="features">
+      <div class="content">
+        <!-- feature 1  -->
+        <div class="feature-1">
+          <div class="box-img">
+            <img src="./assets/img/feature-1.jpg" alt="" class="version-1" />
+            <img src="./assets/img/feature-2.jpg" alt="" class="version-1" />
+          </div>
+          <div class="info">
+            <h2 class="title">Learner outcomes through our awesome platform</h2>
+            <p class="desc">
+              87% of people learning for professional development report career
+              benefits like getting a promotion, a raise, or starting a new
+              career.
+            </p>
+            <p class="desc">Lesson Impact Report (2022)</p>
+            <a href="#!" class="btn">Sign Up</a>
+          </div>
+        </div>
+        <!-- feature 2  -->
+        <div class="feature-2">
+          <div class="info">
+            <h2 class="title">
+              Take the next step toward your personal and professional goals
+              with Lesson.
+            </h2>
+            <p class="desc">
+              Take the next step toward. Join now to receive personalized and
+              more recommendations from the full Coursera catalog.
+            </p>
+            <a href="#!" class="btn">Join Now</a>
+          </div>
+          <div class="box-img">
+            <img src="./assets/img/feature-3.jpg" alt="" class="version-2" />
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
