--- a/index.html
+++ b/index.html
@@ -416,5 +416,61 @@
         </div>
       </div>
     </div>
+    <!-- blog  -->
+    <div class="blog">
+      <div class="content">
+        <h2 class="title">Our blog</h2>
+        <p class="desc">
+          Read our regular travel blog and know the latest update of tour and
+          travel
+        </p>
+        <div class="box">
+          <!-- box 1 -->
+          <div class="box-item">
+            <img src="./assets/img/blog-1.jpg" alt="" />
+            <div class="info">
+              <p class="date">21 November 2021</p>
+              <p class="title">
+                <a href="#!">
+                  How to become a pro web designer in 2022 and get remot job?
+                </a>
+              </p>
+              <a href="#!" class="btn">Read More</a>
+            </div>
+          </div>
+          <!-- box 2 -->
+          <div class="box-item">
+            <img src="./assets/img/blog-2.jpg" alt="" />
+            <div class="info">
+              <p class="date">21 November 2021</p>
+              <p class="title">
+                <a href="#!">
+                  How to become a pro web designer in 2022 and get remot job?
+                </a>
+              </p>
+              <a href="#!" class="btn">Read More</a>
+            </div>
+          </div>
+          <!-- box 3 -->
+          <div class="box-item">
+            <img src="./assets/img/blog-3.jpg" alt="" />
+            <div class="info">
+              <p class="date">21 November 2021</p>
+              <p class="title">
+                <a href="#!">
+                  How to become a pro web designer in 2022 and get remot job?
+                </a>
+              </p>
+              <a href="#!" class="btn">Read More</a>
+            </div>
+          </div>
+        </div>
+        <div class="dot">
+          <div class="dot-item"></div>
+          <div class="dot-item active"></div>
+          <div class="dot-item"></div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
